--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         <button type="button" class="btn zero number">0</button>
         <button type="button" class="btn dot symbol">.</button>
         <button type="button" class="btn equal">=</button>
+        <button type="button" class="btn sci sin">sin</button>
+        <button type="button" class="btn sci cos">cos</button>
+        <button type="button" class="btn sci tan">tan</button>
+        <button type="button" class="btn sci lg">lg</button>
+        <button type="button" class="btn sci ln">ln</button>
+        <button type="button" class="btn sci xy">x<sup>y</sup></button>
+        <button type="button" class="btn sci sqrt">&radic;x</button>
+        <button type="button" class="btn sci parS">(</button>
+        <button type="button" class="btn sci parE">)</button>
+        <button type="button" class="btn sci pi">&pi;</button>
     </div>
 </div>
 
